force-app/main/default/objects/Deployment_Assessment__c/Deployment_Assessment__c.object-meta.xml
<CustomObject>
    <description>Stores one deployment comparison and risk assessment run.</description>
    <label>Deployment Assessment</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Deployment Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>