force-app/main/default/objects/Deployment_Assessment__c/fields/Assessment_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Assessment_Key__c</fullName>
    <label>Assessment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>