force-app/main/default/objects/Deployment_Assessment__c/fields/Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Score__c</fullName>
    <label>Readiness Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>