force-app/main/default/objects/Deployment_Assessment__c/fields/Rollback_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Checklist__c</fullName>
    <label>Rollback Checklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>