force-app/main/default/objects/Deployment_Assessment__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <label>Source Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>