force-app/main/default/objects/Deployment_Assessment__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <label>Target Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>