force-app/main/default/objects/Deployment_Assessment__c/fields/Test_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Checklist__c</fullName>
    <label>Test Checklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>